--- a/Selu.383.SP24.Mobile/package.json
+++ b/Selu.383.SP24.Mobile/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "selu383.sp24.mobile",
+  "name": "selu.383.sp24.mobile",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
@@ -9,7 +9,7 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "expo": "~50.0.6",
+    "expo": "~50.0.7",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4"
