lecture code from 1st p03 class

--- a/Selu.383.SP24.Mobile/app.json
+++ b/Selu.383.SP24.Mobile/app.json
@@ -32,6 +32,9 @@
         "projectId": "ad6bd4e0-31ba-4621-b19f-3c6becb0f960"
       }
     },
-    "owner": "lillaundry"
-  }
+    "owner":"lillaundry"
+    
+  },
+  "plugins":["expo-router"],
+    "scheme": "your-app-scheme"
 }
