--- a/Selu.383.SP24.Mobile/.env
+++ b/Selu.383.SP24.Mobile/.env
@@ -1,1 +1,1 @@
-EXPO_PACKAGER_PROXY_URL=http://d473-147-174-75-22.ngrok-free.app
+EXPO_PACKAGER_PROXY_URL=http://1ac0-147-174-75-22.ngrok-free.app   
