--- a/Selu383.SP24.Web/package.json
+++ b/Selu383.SP24.Web/package.json
@@ -14,8 +14,9 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.2",
-    "sort-by": "^1.2.0"
+    "react-router-dom": "^6.22.1",
+    "sort-by": "^0.0.2",
+    "use-http": "^1.0.28"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
