--- a/Selu383.SP24.Web/package.json
+++ b/Selu383.SP24.Web/package.json
@@ -15,6 +15,7 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "sort-by": "^0.0.2",
