--- a/Selu383.SP24.Web/package.json
+++ b/Selu383.SP24.Web/package.json
@@ -16,6 +16,7 @@
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
+    "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "sort-by": "^0.0.2",
@@ -23,6 +24,7 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
+    "@types/react-datepicker": "^6.2.0",
     "@types/react-dom": "^18.2.17",
     "@typescript-eslint/eslint-plugin": "^6.14.0",
     "@typescript-eslint/parser": "^6.14.0",
