--- a/Selu383.SP24.Web/package.json
+++ b/Selu383.SP24.Web/package.json
@@ -12,10 +12,11 @@
   "dependencies": {
     "@types/node": "^20.11.25",
     "@types/react-router-dom": "^5.3.3",
+    "bootstrap": "^5.3.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.10.1",
+    "react-bootstrap": "^2.10.2",
     "react-datepicker": "^6.3.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
