backend/frontend updates
made reservations and changed roomtype names. beginning reservation page

--- a/Selu383.SP24.Api/Selu383.SP24.Api.csproj
+++ b/Selu383.SP24.Api/Selu383.SP24.Api.csproj
@@ -21,4 +21,9 @@
     <ProjectReference Include="..\Selu383.SP24.Web\Selu383.SP24.Web.esproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
 </Project>
