--- a/Selu383.SP24.Web/package.json
+++ b/Selu383.SP24.Web/package.json
@@ -1,39 +1,42 @@
 {
-  "name": "selu383-sp24-web",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "name": "selu.383.sp24.mobile",
+  "version": "1.0.0",
+  "main": "expo-router/entry",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "start": "expo start",
+    "android": "expo start --android",
+    "ios": "expo start --ios",
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@types/node": "^20.11.25",
-    "@types/react-router-dom": "^5.3.3",
-    "bootstrap": "^5.3.3",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.4",
-    "react": "^18.2.0",
-    "react-bootstrap": "^2.10.2",
-    "react-datepicker": "^6.3.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3",
-    "sort-by": "^0.0.2",
-    "use-http": "^1.0.28"
+    "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "1.18.2",
+    "@react-navigation/stack": "^6.3.29",
+    "@rneui/base": "^4.0.0-rc.7",
+    "@rneui/themed": "^4.0.0-rc.8",
+    "@types/react": "~18.2.14",
+    "expo": "^49.0.23",
+    "expo-constants": "~14.4.2",
+    "expo-linking": "~5.0.2",
+    "expo-router": "^2.0.0",
+    "expo-status-bar": "~1.6.0",
+    "react": "18.2.0",
+    "react-native": "0.72.10",
+    "react-native-calendars": "^1.1304.1",
+    "react-native-gesture-handler": "~2.12.0",
+    "react-native-paper": "^5.12.3",
+    "react-native-safe-area-context": "4.6.3",
+    "react-native-screens": "~3.22.0",
+    "react-native-vector-icons": "^10.0.3",
+    "typescript": "^5.1.3"
   },
   "devDependencies": {
-    "@types/react": "^18.2.64",
-    "@types/react-datepicker": "^6.2.0",
-    "@types/react-dom": "^18.2.17",
-    "@typescript-eslint/eslint-plugin": "^6.14.0",
-    "@typescript-eslint/parser": "^6.14.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
-    "eslint": "^8.55.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "typescript": "^5.2.2",
-    "vite": "^5.0.8"
+    "@babel/core": "^7.20.0",
+    "@types/node": "^20.11.28",
+    "@types/react-native": "^0.73.0"
+  },
+  "private": true,
+  "overrides": {
+    "react-refresh": "~0.14.0"
   }
 }
