--- a/Selu.383.SP24.Mobile/app.json
+++ b/Selu.383.SP24.Mobile/app.json
@@ -13,7 +13,7 @@
       "backgroundColor": "#ffffff"
     },
     "assetBundlePatterns": [
-      "*/"
+      
     ],
     "ios": {
       "supportsTablet": true
@@ -28,12 +28,15 @@
     "web": {
       "favicon": "./assets/favicon.png"
     },
- 
     "extra": {
       "eas": {
         "projectId": "ad6bd4e0-31ba-4621-b19f-3c6becb0f960"
       }
     },
-    "owner": "lillaundry"
+    "owner": "lillaundry",
+    "plugins": [
+      "expo-router"
+    ]
+    
   }
 }
