--- a/Selu383.SP24.Mobile/package.json
+++ b/Selu383.SP24.Mobile/package.json
@@ -21,6 +21,7 @@
     "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
     "react-native": "0.72.10",
+    "react-native-calendars": "^1.1304.1",
     "react-native-gesture-handler": "~2.12.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.6.3",
